[package]
name = "heliosphere"
version = "0.3.0"
authors = ["alianse777"]
edition = "2021"
description = "Rust-idiomatic Tron API client library"
readme = "README.md"
license = "MIT"
keywords = ["tron", "blockchain", "api", "client", "cryptocurrency"]
categories = ["api-bindings"]
repository = "https://github.com/alianse777/heliosphere"

[dependencies]
heliosphere-core = { path = "../heliosphere-core" }
heliosphere-signer = { path = "../heliosphere-signer"}
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["time"] }
url = "2.5.4"

[dev-dependencies]
ethabi = "18.0.0"
futures = "0.3.31"
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
